--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,5 +13,6 @@ test:
   stage: test
   image: golang:1.18
   script:
+    - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin
     - golangci-lint run
     - go test
