--- a/dev.application.yml
+++ b/dev.application.yml
@@ -1,5 +1,5 @@
 APP_NAME: urlblaster
 SERVER_HOST: localhost
 SERVER_PORT: 9808
-STORAGE_HOST: redis
+STORAGE_HOST: redis-cluster
 STORAGE_PORT: 6379
