--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,10 @@ stages:
 build:
   stage: compile
   services:
-    - name: artifactory-gojek.golabs.io:6555/grokzen/redis-cluster:latest
-      alias: redis-cluster
+    redis:
+      image: artifactory-gojek.golabs.io:6555/grokzen/redis-cluster:latest
+      ports:
+        - "6379:6379"
   script:
     - make ci
 
