--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,8 @@
 image: "artifactory-gojek.golabs.io:6555/cx-go:1.18"
 
 services:
-  redis:
-    image: artifactory-gojek.golabs.io:6555/grokzen/redis-cluster:latest
-    ports:
-      - "6379:6379"
+  - name: artifactory-gojek.golabs.io:6555/grokzen/redis-cluster:latest
+    alias: redis-cluster
 
 stages:
   - compile
