--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,10 @@
 image: "artifactory-gojek.golabs.io:6555/cx-go:1.18"
 
+variable:
+  GOPRIVATE: "source.golabs.io/*"
+  STORAGE_HOST: redis-cluster
+
+
 services:
   - name: artifactory-gojek.golabs.io:6555/grokzen/redis-cluster:latest
     alias: redis-cluster
