--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,8 @@
 image: "artifactory-gojek.golabs.io:6555/cx-go:1.18"
 
-variable:
+variables:
   GOPRIVATE: "source.golabs.io/*"
   STORAGE_HOST: redis-cluster
-
 
 services:
   - name: artifactory-gojek.golabs.io:6555/grokzen/redis-cluster:latest
